--- a/WageCalculatorBackend/appsettings.json
+++ b/WageCalculatorBackend/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IpRateLimiting": {
+    "Enabled": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "IpWhitelist": [],
+    "EndpointWhitelist": [],
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 100
+      }
+    ]
+  }
 }
