--- a/WageCalculatorBackend/WageCalculatorBackend.csproj
+++ b/WageCalculatorBackend/WageCalculatorBackend.csproj
@@ -16,4 +16,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
   </ItemGroup>
 
+	<Target Name="BuildFrontend" AfterTargets="Build">
+		<Exec Command="cd ../WageCalculatorFrontend &amp;&amp; npm install &amp;&amp; npm run build"
+			  WorkingDirectory="..\\WageCalculatorFrontend" />
+	</Target>
+
+
+
+
 </Project>
