--- a/WageCalculatorFrontend/angular.json
+++ b/WageCalculatorFrontend/angular.json
@@ -36,7 +36,8 @@
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "externalDependencies":["@angular/material/prebuilt-themes/deeppurple-amber.css"]
           },
           "configurations": {
             "production": {
