--- a/WageCalculatorFrontend/angular.json
+++ b/WageCalculatorFrontend/angular.json
@@ -60,7 +60,15 @@
                   "maximumError": "6kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "externalDependencies":[
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "@angular/material/dialog",
+              "@angular/material/icon",
+              "@angular/material/form-field",
+              "@angular/material/input",
+              "@angular/material/button"
+            ]
             },
             "development": {
               "optimization": false,
