--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
     "name": "wage-calculator-frontend",
-    "version": "1.0.0",
+    "version": "0.0.0",
     "scripts": {
       "ng": "ng",
       "start": "ng serve",
-      "build": "cd WageCalculatorFrontend && ng build",
+      "build": "ng build",
       "watch": "ng build --watch --configuration development",
       "test": "ng test"
     },
     "private": true,
     "dependencies": {
       "@angular/animations": "^17.3.0",
+      "@angular/cdk": "^17.3.10",
       "@angular/common": "^17.3.0",
       "@angular/compiler": "^17.3.0",
       "@angular/core": "^17.3.0",
       "@angular/forms": "^17.3.0",
+      "@angular/material": "^17.3.10",
       "@angular/platform-browser": "^17.3.0",
       "@angular/platform-browser-dynamic": "^17.3.0",
       "@angular/router": "^17.3.0",
@@ -36,4 +38,3 @@
       "typescript": "~5.4.2"
     }
   }
-  
