--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "wage-calculator-frontend",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "scripts": {
       "ng": "ng",
       "start": "ng serve",
-      "build": "ng build",
+      "build": "cd WageCalculatorFrontend &&  ng build",
       "watch": "ng build --watch --configuration development",
       "test": "ng test"
     },
